--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -34,6 +34,9 @@ a:hover{
 *{
     box-sizing: border-box;
 }
+/* body{
+    overflow-x: hidden;
+} */
 
 
 /* ScrollBar */
@@ -83,11 +86,9 @@ header{
 .header{
     width: 100%;
     height: 165px;
-   
     position: fixed;
     top: 0;
-     
-    z-index: 99;
+    z-index: 99999;
 }
 .h-bg-1{
     width: 100%;
