--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -432,6 +432,9 @@ button.search-button svg{
 .burger-icon{
     display: none;
 }
+.burg-menu{
+    display: none;
+}
 
 .padding{
     padding: var(--section-padding);
@@ -968,9 +971,12 @@ footer{
     background: #fff;
     z-index: 1;
 }
-.footer-adv2{
-    margin-top: 100px!important;
+.hidden-news-det-icon{
+    display: none;
 }
+/* .footer-adv2{
+    margin-top: 100px!important;
+} */
 .footer-adv{
     margin-top: 152px;
     background-color: #E3662A;  
